namespace ClearEyeQ.SharedKernel.Domain.ValueObjects;

/// <summary>
/// Severity classification for ocular health conditions.
/// </summary>
public enum Severity
{
    None = 0,
    Mild = 1,
    Moderate = 2,
    Severe = 3,
    Critical = 4
}
